@@ -5,7 +5,8 @@ Changelog
 1.0b31 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Rename a variable in ServiceCheck that conflicted with NRPEService and
+  prevented custom naming of NRPE checks..
 
 
 1.0b30 (2015-01-09)
